# mmal_camera

./: CMakeLists.txt  main.cpp
